--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "csv-parse": "^5.3.5",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "papaparse": "^5.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/node": "^18.11.18",
+    "@types/papaparse": "^5.3.7",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
